[gd_scene load_steps=9 format=2]

[ext_resource path="res://player/Mover.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/TargetZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/music.ogg" type="AudioStream" id=3]
[ext_resource path="res://background/ParallaxBg.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/Level.gd" type="Script" id=5]
[ext_resource path="res://levels/Results.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/Sauce.tscn" type="PackedScene" id=7]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=8]

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="TargetZone" parent="." instance=ExtResource( 2 )]
position = Vector2( 1344, 128 )

[node name="Mover" parent="." instance=ExtResource( 1 )]
position = Vector2( 192, 96 )

[node name="Camera" parent="Mover" instance=ExtResource( 8 )]
max_zoom = 8

[node name="Sauce" parent="." instance=ExtResource( 7 )]

[node name="ParallaxBg" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Results" parent="UI" instance=ExtResource( 6 )]
visible = false

[connection signal="body_entered" from="TargetZone" to="." method="_on_TargetZone_body_entered"]
[connection signal="cutsceneOver" from="Mover" to="." method="_on_Mover_cutsceneOver"]
[connection signal="landed" from="Mover" to="." method="_on_Mover_landed"]
[connection signal="done_zooming" from="Mover/Camera" to="Mover" method="_on_Camera_done_zooming"]
[connection signal="body_entered" from="Sauce" to="." method="_on_Sauce_body_entered"]
